<resources>
    <string name="app_name">App-Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- activity_login-->
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="ok">Ok</string>

    <string name="enter_password">Enter password</string>
    <string name="no_password">No password</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="invalid_password">Invalid password</string>
    <string name="retype_password">Retype password</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="rm_passwd_success">Remove password success</string>
    <string name="fail_del_password">Can not delete password</string>

    <string name="fail_login">Login fail</string>

    <!-- activity_main -->
    <string name="no_internet">No internet connection</string>
    <string name="warning">Warning</string>
    <string name="safe">Safe</string>

    <!-- activity_warning -->
    <string name="cancel">Cancel</string>

    <!-- SettingListFragment -->
    <string name="no_data">No data</string>

    <!-- LockScreenFragment -->
    <string name="change">change</string>

    <!-- activity_main_drawable -->
    <string name="setting">Setting</string>

    <!-- activity_setting -->
    <string name="icon">icon</string>
    <string name="lock_screen">Lock screen</string>
    <string name="account">Account</string>
    <string name="threshold">Threshold</string>

    <!-- CreatePasswordFragment -->
    <string name="new_passwd">New password</string>
    <string name="confirm_passwd">Confirm password</string>

    <!-- fragment_password -->
    <string name="logo">Logo</string>
    <string name="back">Back</string>

    <!-- fragment_remove_or_change_passwd -->
    <string name="remove_passwd">Remove password</string>
    <string name="change_passwd">Change password</string>

    <!-- fragment_login_user-->
    <string name="login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="create_new_user">Create new user</string>

    <!-- fragment_new_account -->
    <string name="create_new_account">Create new account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="password">Password</string>
    <string name="create">Create</string>

    <!-- fragment_threshold -->
    <string name="fire_threshold">Fire alarm threshold</string>
    <string name="gas_threshold">Gas alarm threshold</string>
    <string name="set_default">Set default</string>
    <string name="save">Save</string>

    <!-- ThresholdFragment -->
    <string name="save_thre_success">Save threshold successful</string>
    <string name="can_not_save_thre">Can\'t save threshold</string>

    <!-- SignInFragment -->
    <string name="no_email_password">Please enter email and password</string>

    <!-- content_main -->
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="gas">Gas</string>
    <string name="led_state">led state</string>

</resources>
