<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_fire_thre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/fire_threshold"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_fire_thre_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_fire_thre"
        android:textColor="@color/colorBlack"
        android:inputType="number"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_gas_thre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/et_fire_thre_number"
        android:text="@string/gas_threshold"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_gas_thre_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_gas_thre"
        android:inputType="number"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_set_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_gas_thre_number"
        android:text="@string/set_default" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_set_default"
        android:text="@string/save" />

</RelativeLayout>