<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.activity.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/tv_tempt_number"
        android:layout_toStartOf="@id/tv_tempt_number"
        android:text="@string/temperature"
        android:textColor="@color/colorBlack"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_tempt_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textColor="@color/colorBlack"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_temperature"
        android:layout_toLeftOf="@id/tv_humidity_number"
        android:layout_toStartOf="@id/tv_humidity_number"
        android:text="@string/humidity"
        android:textColor="@color/colorBlack"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_humidity_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_tempt_number"
        android:textColor="@color/colorBlack"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_gas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_humidity"
        android:layout_toLeftOf="@id/tv_gas_number"
        android:layout_toStartOf="@id/tv_gas_number"
        android:text="@string/gas"
        android:textColor="@color/colorBlack"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_gas_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_humidity_number"
        android:textColor="@color/colorBlack"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/iv_gas_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_gas_number"
        android:contentDescription="@string/led_state"
        android:src="@drawable/custom_led_state" />

    <TextView
        android:id="@+id/tv_gas_safe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_gas_number"
        android:layout_toEndOf="@id/iv_gas_state"
        android:layout_toRightOf="@id/iv_gas_state"
        android:textColor="@color/colorBlack"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/iv_fire_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_gas_state"
        android:contentDescription="@string/led_state"
        android:src="@drawable/custom_led_state" />

    <TextView
        android:id="@+id/tv_fire_safe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_gas_safe"
        android:layout_toEndOf="@id/iv_fire_state"
        android:layout_toRightOf="@id/iv_fire_state"
        android:textColor="@color/colorBlack"
        android:textSize="25sp" />

</RelativeLayout>